# fast_bert

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  build.rs  test.py  test_xla.py
docker/: Dockerfile  Dockerfile.gpu
examples/: download.rs  run.rs
src/: download.rs  lib.rs  main.rs  model.rs
src/model/: cpu.rs  gpu.rs  mod.rs  smelt.rs
