[package]
name = "fast_bert"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fast_bert"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
futures-util = "0.3.25"
safetensors = "0.3"
thiserror = "1.0"
tokenizers = { version = "0.13.3", default-features=false, features=["onig"] }
tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
axum = "0.6.3"
tracing = "0.1.37"
serde = { version = "1.0.152", features = ["serde_derive"] }
tower-http = { version = "0.3.5", features = ["trace"] }
serde_json = "1.0.91"
candle = { version = "0.1.2", package = "candle-core" }
candle-nn = { version = "0.1.2" }
hf-hub = { version = "0.3.0", features = ["tokio"] }
axum-macros = "0.3.7"

[profile.release]
strip = true
lto = "fat"
codegen-units = 1
